...
                    .foregroundColor(.neutral.onBackground)
                    .background(Color.neutral.background)
                    .font(.text.paragraph)
                    .cornerRadius(14)
                    .position(x: vm.tutorials[vm.currentPage].textPosition.width,
                              y: isCompact ? vm.tutorials[vm.currentPage].textPosition.height : vm.tutorials[vm.currentPage].textPosition.height + 64)
                    .accessibilityIdentifier("Tutorial Hints Text")
                
            }
            .padding(.horizontal, 16)
            
            
        }
...
