...
                        }
                    }
                    .frame(maxWidth: .infinity)
                    .padding(16)
                    .background(Color.neutral.surface)
                    .cornerRadius(8)
                    .accessibilityIdentifier("Interactive Tutorial Button")
                }
                                     
            }
            .frame(maxWidth: .infinity,maxHeight: .infinity, alignment: .top)
            .padding(EdgeInsets(top: 16, leading: 24, bottom: 0, trailing: 24))
            .foregroundColor(.neutral.onBackground)
...
